--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,55 @@
-!/htdocs/BancoPX
-/*
-!/mysql
+/anonymous
+/apache
+/cgi-bin
+/contrib
+/FileZillaFTP
+/htdocs
+/img
+/install
+/licenses
+/locale
+/mailoutput
+/mailtodisk
+/MercuryMail
+/perl
+/php
+/phpMyAdmin
+/sendmail
+/src
+/tmp
+/tomcat
+/webalizer
+/webdav
+/mysql/bd_demo
+apache_start.bat
+apache_stop.bat
+catalina_service.bat
+catalina_start.bat
+catalina_stop.bat
+ctlscript.bat
+filezilla_setup.bat
+filezilla_start.bat
+filezilla_stop.bat
+mercury_start.bat
+mercury_stop.bat
+mysql_start.bat
+mysql_stop.bat
+passwords.txt
+properties.ini
+readme_de.txt
+readme_en.txt
+RELEASENOTES
+service.exe
+setup_xampp.bat
+test_php.bat
+uninstall.dat
+uninstall.exe
+xampp_shell.bat
+xampp_start.exe
+xampp_stop.exe
+xampp-control.exe
+xampp-control.ini
+xampp-control.log
+
+/mysql/data/bd_demo
 !/.gitignore
